# spider_fingerprint

./: .gitignore  Cargo.toml  README.md  build.rs  chrome_versions.rs.fallback
assets/: high_quality_referrers.txt
src/: configs.rs  lib.rs  referrers_domains_index.rs  referrers_hq_index.rs  spoof_gpu.rs  spoof_headers.rs  spoof_mouse_movement.rs  spoof_refererer.rs  spoof_user_agent.rs  spoofs.rs  versions.rs
src/profiles/: gpu.rs  gpu_iphone.rs  gpu_limits.rs  gpu_linux.rs  gpu_mac.rs  gpu_windows.rs  mod.rs
tests/: basic.rs
