[package]
name = "spider_fingerprint"
version = "2.37.120"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "Fingerprint library for Rust."
repository = "https://github.com/spider-rs/spider_fingerprint"
homepage = "https://github.com/spider-rs/spider_fingerprint"
readme = "README.md"
keywords = ["fingerprint", "browser"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider_fingerprint"
edition = "2021"

include = [
    "build.rs",
    "chrome_versions.rs.fallback",
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
rand = "0.9"
lazy_static = "1"
url = "2"
case_insensitive_string = { version = "0.2", features = ["compact"] }
serde = { version = "1", features = ["derive"], optional = true }
phf = { version = "0.11", features = ["macros"] }
http = { version = "1", optional = true }
aho-corasick = "1"

[features]
default = ["serde", "dynamic-versions", "headers"]
serde = ["dep:serde", "case_insensitive_string/serde"]
dynamic-versions = ["dep:reqwest", "dep:serde_json", "dep:phf_codegen"]
headers  = ["dep:http"]

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }
phf_codegen = { version = "0.11", optional = true }